P3/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
  namespace: dev
spec:
  # Service interno para que el Pod sea accesible dentro del cluster.
  type: ClusterIP
  selector:
    app: wil-playground
  ports:
    # Publicamos el puerto 80 del Service hacia el 8888 de la app.
    - name: http
      port: 80
      targetPort: 8888
      protocol: TCP
